# AskArt_PBL

./: package-lock.json
pbl-openai-be/: .env  config.py  dependencies.py  main.py  models.py  openai_utils.py  pyproject.toml
pbl-openai-be/prompt_tmpl/: system_prompt.py
pbl-openai-fe/: README.md  index.html  package-lock.json  package.json
pbl-openai-fe/src/: App.vue  main.js
pbl-openai-fe/src/assets/: base.css  main.css
pbl-openai-fe/src/components/: ChatInterface.vue  ImageDisplay.vue
